--- a/homework/html/button.html
+++ b/homework/html/button.html
@@ -37,10 +37,17 @@
             {
                 background-color: cyan;
             }
+            body
+            {
+                background:url("https://th.bing.com/th/id/OIP.z3QgzF4t0cbe6DpA9gnUswHaEK?pid=ImgDet&rs=1");
+                background-repeat: no-repeat;
+                background-size:cover;
+            }
         </style>
     </head>
   <body>
 <div>
+    <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
 <button class="Green">G</button>
 <button class="Purple">X</button>
 <button class="Green">E</button>
